--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "test": "node scripts/test.js --env=jsdom",
     "test-coverage": "npm run test -- --coverage",
     "format": "prettier --write ./src/**.*",
-    "precommit": "prettier./src/**.* && lint && test",
+    "check-format": "prettier -l ./src/**.*",
+    "precommit": "npm run check-format && npm run lint && CI=true npm run test",
     "lint": "eslint ./src",
     "make": "plop"
   },
@@ -57,6 +58,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "globby": "^8.0.1",
+    "husky": "^0.14.3",
     "plop": "^2.0.0",
     "prettier": "1.12.1",
     "prettier-eslint": "^8.8.1",
